# google-ads-baby

./: .gitignore  .gitlab-ci.yml  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  hooks.json  package.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
hooks/: hooks.json
hooks/google-ads-baby-safety/: hooks.json
plugins/google-ads-baby/: .mcp.json  hooks.json
plugins/google-ads-baby/.codex-plugin/: plugin.json
plugins/google-ads-baby/hooks/: hooks.json
scripts/: generate-readme-tools.mjs  knowledge-hook.js  pre-commit-secrets.sh  safety-hook.js  safety.sh  start-mcp.js
server/: package-lock.json  package.json  pyproject.toml
server/google_ads_baby/: client.py  config.py  confirm.py  server.py
server/google_ads_baby/tools/: read.py  write.py
server/src/: auth.ts  client.ts  config.ts  confirm.ts  constants.ts  index.ts  validation.ts
server/src/client/: ads.ts  assets.ts  campaigns.ts
server/src/tools/: analysis-helpers.ts  auth.ts  presets.ts  read-accounts.ts  read-analysis.ts  read.ts  write-executor.ts  write-prepare-ads.ts  write-prepare-assets.ts  write-prepare-campaigns.ts  write-schemas.ts  write.ts
server/test/: smoke.ts
