[project]
name = "google-ads-baby"
version = "0.1.0"
description = "Google Ads MCP server with two-phase mutation safety"
requires-python = ">=3.10"
dependencies = [
    "google-ads>=30.1.0",
    "fastmcp>=3.2.0",
    "mcp[cli]>=1.2.0",
]

[project.scripts]
google-ads-baby = "google_ads_baby.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
